todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: persistent
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo-app
          image: heclll/todo-app:1.9
          volumeMounts:
            - name: persistent
              mountPath: /usr/src/app/persistent
